@@ -1,5 +1,8 @@
 Revision history for DBIx::Class
 
+        - add scope guard to Row::insert to ensure rollback gets called
+        - more heuristics in Row::insert to try and get insert order right
+        - eliminate vestigial code in PK::Auto
         - more expressive DBI errors
         - soften errors during deploy
         - ensure_connected before txn_begin to catch stomping on transaction
